# improver-nw-russia

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
configs/: aifs_skeleton.yaml  domain.yaml  models.yaml  pipeline.yaml  verification.yaml
docs/: iris_metadata_guide.md
notebooks/: 01_data_exploration.ipynb
scripts/: build_landmask.py  download_aifs.py  download_gefs.py  run_pipeline.py  run_regrid_compare.py  run_skeleton.py  run_verification.py
src/data/: aifs.py  era5.py  gefs.py  iris_convert.py  landmask.py
src/pipeline/: run_chain.py
src/utils/: config.py  grid.py
src/verification/: metrics.py  regrid_compare.py  scorecard.py
tests/: test_iris_convert.py
